WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
250633
Web Inspector: WebKit-internal JSContexts should not be inspectable, even if internal policies would override `inspectable`
https://bugs.webkit.org/show_bug.cgi?id=250633
Summary
Web Inspector: WebKit-internal JSContexts should not be inspectable, even if ...
Patrick Angle
Reported
2023-01-14 20:17:13 PST
<
rdar://103312497
>
Attachments
Add attachment
proposed patch, testcase, etc.
Patrick Angle
Comment 1
2023-01-14 20:27:19 PST
Pull request:
https://github.com/WebKit/WebKit/pull/8666
EWS
Comment 2
2023-01-17 12:05:58 PST
Committed
259000@main
(11aafb6ec00b): <
https://commits.webkit.org/259000@main
> Reviewed commits have been landed. Closing PR #8666 and removing active labels.
Robert Jenner
Comment 3
2023-01-17 13:38:42 PST
Reverted by
https://github.com/WebKit/WebKit/pull/8733
EWS
Comment 4
2023-01-17 13:42:14 PST
Committed
259004@main
(c9e1cf59eeca): <
https://commits.webkit.org/259004@main
> Reviewed commits have been landed. Closing PR #8733 and removing active labels.
Robert Jenner
Comment 5
2023-01-17 13:43:10 PST
Reverted change that broke building for Monterey and BigSur here:
https://commits.webkit.org/259004@main
Patrick Angle
Comment 6
2023-01-18 09:54:33 PST
Pull request:
https://github.com/WebKit/WebKit/pull/8773
EWS
Comment 7
2023-01-18 18:32:04 PST
Committed
259064@main
(d08492cc7b9e): <
https://commits.webkit.org/259064@main
> Reviewed commits have been landed. Closing PR #8773 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug